16/07/2012:
	- Added check to KakaduImage.cc to handle bilevel images.
	- Clean up to use only floats and floorf() in Transforms.cc.


14/05/2012:
	- Added bilinear interpolation option for CVT resizing. Added
	  INTERPOLATION parameter to Environment.h, which takes an integer.
	  0 for fastest nearest neighbour and 1 for bilinear (default).
	  Current bilinear implementation 2.5x slower than nearest neighbour.
	- Additional fix to MAX_LAYERS code.


11/05/2012:
	- Modified layer handling to decode all available layers if
	  MAX_LAYERS parameter is set to -1.


08/05/2012:
	- Fix to Mac OSX and FreeBSD compilation of KakaduImage.cc.


07/05/2012:
	- Fixed strip height calculation error in CVT.cc


01/05/2012:
	- Modified memory handling in JPEGCompressor.cc to better handle
	  images where the compressed version may be bigger than the
	  original (for example at very high quality levels).
	- Changes to CVT.cc to work with new JPEGCompressor code and removal
	  of chunked encoding header directive from CVT.cc.
	- Fixed bug in CVT when specifying both WID and HEI.
	- Fixed compiler warning in IIPResponse.cc.
	- Added man page.
	- Added missing definition of get_nprocs() function to Kakadu.cc
	  for Mac OSX and FreeBSD.


20/04/2012:
	- Fixed memory overun error in filter_contrast in Transforms.cc.


18/04/2012:
	- Major rewrite of CVT code to unify TIFF and JPEG2000 region
	  export. Region compositing now in TileManager->getRegion with
	  modified getRegion Kakadu function. Changes also to View class
	  and ColourTransforms code to enable greater modularity for
	  image processing to regions. ColourTransforms renamed to
	  Transforms.
	  Thanks to The National Library of Wales, who will be using
	  iipsrv & iipmooviewer to deliver their Historic Newspapers
	  in 2012.


21/03/2012:
	- Fix to TPTImage.c to force RGB conversion for YCbCr compressed
	  JPEG TIFFs, which is now the default in VIPS. Thanks to John
	  Cupitt for spotting this.


17/03/2012: